# pytest-embrace

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Makefile  README.md  index.html  mkdocs.yml  poetry.toml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: ci.yml
about/: index.html
docs/: about.md  faq.md  index.md  pseudocode-example.md  semantics.md  two-to-three.md
docs/reference/: api.md  cli.md
docs/usage/: index.md
docs/usage/code-generation/: index.md
docs/usage/designing-tests/: index.md  making-cases.md
docs/usage/leveraging-filenames/: index.md
docs/usage/tables-and-modules/: index.md
docs_overrides/: main.html
faq/: index.html
pytest_embrace/: __init__.py  anno.py  case.py  codegen.py  embrace.py  exc.py  gen.py  loader.py  plugin.py  test_undot.py  undot.py
reference/api/: index.html
reference/cli/: index.html
search/: search_index.json
semantics/: index.html
tests/: conftest.py  test_pytest_embrace.py  test_simple.py  utils.py
tests/test_case/: test_attr_info.py  test_to_text.py
tests/test_codegen/: conftest.py  test_render_expert.py  test_render_flat_case.py  test_render_render_custom_code.py  test_render_table_case.py
tests/test_loader/: test_anno_derive_filename.py  test_recursive.py  test_simple.py  test_trickle_down.py  test_type_enforcement.py
tests/test_plugin/: test_custom_generator_coercion.py  test_custom_generators.py  test_derive_filename_with_table.py  test_fixture_cleanup.py  test_gen.py  test_gen_anno.py  test_gen_anno_comment.py  test_gen_anno_derive_attr_from_file.py  test_recursive.py  test_safe_mutable_module_scope.py  test_simple.py  test_table_trickle.py  utils.py
tests/test_plugin/test_custom_generators/: test_basic.py  test_txt.py  test_with_json.py
two-to-three/: index.html
usage/: index.html
usage/code-generation/: index.html
usage/designing-tests/: index.html
usage/designing-tests/making-cases/: index.html
usage/leveraging-filenames/: index.html
usage/tables-and-modules/: index.html
